ci(github): migrated NPM scripts to Lerna 8

--- a/package.json
+++ b/package.json
@@ -33,48 +33,48 @@
     "lint": "eslint --ext ts --config .eslintrc.yml .",
     "lint:fix": "eslint --ext ts --config .eslintrc.yml --fix .",
     "compile:all": "lerna run compile",
-    "compile:libs": "lerna run compile --scope '@serenity-js/*' --scope '@integration/testing-tools' --scope '@integration/cucumber-specs'",
-    "compile:@serenity-js": "lerna run compile --scope '@serenity-js/*'",
-    "compile:@integration": "lerna run compile --scope '@integration/*'",
-    "compile:@examples": "lerna run compile --scope '@examples/*'",
-    "test": "lerna run test --scope '@serenity-js/*'",
+    "compile:libs": "lerna run compile --scope @serenity-js/* --scope @integration/testing-tools --scope @integration/cucumber-specs",
+    "compile:@serenity-js": "lerna run compile --scope @serenity-js/*",
+    "compile:@integration": "lerna run compile --scope @integration/*",
+    "compile:@examples": "lerna run compile --scope @examples/*",
+    "test": "lerna run test --scope @serenity-js/*",
     "test:no-coverage": "lerna run test:no-coverage --scope @serenity-js/*",
-    "integration-test:all": "lerna run test --concurrency 1 --scope '@integration/*'",
-    "integration-test:cucumber-all": "lerna run test --concurrency 1 --scope '@integration/cucumber-*'",
-    "integration-test:cucumber-1": "lerna run test --scope '@integration/cucumber-1'",
-    "integration-test:cucumber-2": "lerna run test --scope '@integration/cucumber-2'",
-    "integration-test:cucumber-3": "lerna run test --scope '@integration/cucumber-3'",
-    "integration-test:cucumber-4": "lerna run test --scope '@integration/cucumber-4'",
-    "integration-test:cucumber-5": "lerna run test --scope '@integration/cucumber-5'",
-    "integration-test:cucumber-6": "lerna run test --scope '@integration/cucumber-6'",
-    "integration-test:cucumber-7": "lerna run test --scope '@integration/cucumber-7'",
-    "integration-test:cucumber-8": "lerna run test --concurrency 1 --scope '@integration/cucumber-8-*'",
-    "integration-test:cucumber-9": "lerna run test --concurrency 1 --scope '@integration/cucumber-9'",
-    "integration-test:cucumber-10": "lerna run test --concurrency 1 --scope '@integration/cucumber-10'",
-    "integration-test:cucumber-11": "lerna run test --concurrency 1 --scope '@integration/cucumber-11'",
-    "integration-test:jasmine": "lerna run test --concurrency 1 --scope '@integration/jasmine'",
-    "integration-test:mocha": "lerna run test --concurrency 1 --scope '@integration/mocha'",
-    "integration-test:playwright-all": "lerna run test --concurrency 1 --scope '@integration/playwright-*'",
-    "integration-test:playwright-test": "lerna run test --scope '@integration/playwright-test'",
-    "integration-test:playwright-test-ct": "lerna run test --scope '@integration/playwright-test-ct'",
-    "integration-test:rest": "lerna run test --scope '@integration/rest'",
-    "integration-test:playwright-web": "lerna run test --scope '@integration/playwright-web'",
-    "integration-test:protractor-all": "lerna run test --concurrency 1 --scope '@integration/protractor-*'",
-    "integration-test:protractor-test-runners": "lerna run test --concurrency 1 --scope '@integration/protractor-cucumber' --scope '@integration/protractor-jasmine' --scope '@integration/protractor-mocha'",
-    "integration-test:protractor-cucumber": "lerna run test --scope '@integration/protractor-cucumber'",
-    "integration-test:protractor-jasmine": "lerna run test --scope '@integration/protractor-jasmine'",
-    "integration-test:protractor-mocha": "lerna run test --scope '@integration/protractor-mocha'",
-    "integration-test:protractor-web": "lerna run test --scope '@integration/protractor-web'",
-    "integration-test:webdriverio-8-all": "lerna run test --concurrency 1 --scope '@integration/webdriverio-8-*'",
-    "integration-test:webdriverio-8-test-runners": "lerna run test --concurrency 1 --scope '@integration/webdriverio-8-cucumber' --scope '@integration/webdriverio-8-jasmine' --scope '@integration/webdriverio-8-mocha'",
-    "integration-test:webdriverio-8-cucumber": "lerna run test --scope '@integration/webdriverio-8-cucumber'",
-    "integration-test:webdriverio-8-jasmine": "lerna run test --scope '@integration/webdriverio-8-jasmine'",
-    "integration-test:webdriverio-8-mocha": "lerna run test --scope '@integration/webdriverio-8-mocha'",
-    "integration-test:webdriverio-8-web": "lerna run test --scope '@integration/webdriverio-8-web'",
-    "integration-test:webdriverio-8-web-devtools": "lerna run test:devtools --stream --scope '@integration/webdriverio-8-web'",
-    "integration-test:webdriverio-8-web-webdriver": "lerna run test:webdriver --stream --scope '@integration/webdriverio-8-web'",
-    "integration-test:webdriverio-web": "lerna run test --scope '@integration/webdriverio-web'",
-    "integration-test:webdriverio-test-runners": "lerna run test --concurrency 1 --scope '@integration/webdriverio-cucumber' --scope '@integration/webdriverio-jasmine' --scope '@integration/webdriverio-mocha'",
+    "integration-test:all": "lerna run test --concurrency 1 --scope @integration/*",
+    "integration-test:cucumber-all": "lerna run test --concurrency 1 --scope @integration/cucumber-*",
+    "integration-test:cucumber-1": "lerna run test --scope @integration/cucumber-1",
+    "integration-test:cucumber-2": "lerna run test --scope @integration/cucumber-2",
+    "integration-test:cucumber-3": "lerna run test --scope @integration/cucumber-3",
+    "integration-test:cucumber-4": "lerna run test --scope @integration/cucumber-4",
+    "integration-test:cucumber-5": "lerna run test --scope @integration/cucumber-5",
+    "integration-test:cucumber-6": "lerna run test --scope @integration/cucumber-6",
+    "integration-test:cucumber-7": "lerna run test --scope @integration/cucumber-7",
+    "integration-test:cucumber-8": "lerna run test --concurrency 1 --scope @integration/cucumber-8-*",
+    "integration-test:cucumber-9": "lerna run test --concurrency 1 --scope @integration/cucumber-9",
+    "integration-test:cucumber-10": "lerna run test --concurrency 1 --scope @integration/cucumber-10",
+    "integration-test:cucumber-11": "lerna run test --concurrency 1 --scope @integration/cucumber-11",
+    "integration-test:jasmine": "lerna run test --concurrency 1 --scope @integration/jasmine",
+    "integration-test:mocha": "lerna run test --concurrency 1 --scope @integration/mocha",
+    "integration-test:playwright-all": "lerna run test --concurrency 1 --scope @integration/playwright-*",
+    "integration-test:playwright-test": "lerna run test --scope @integration/playwright-test",
+    "integration-test:playwright-test-ct": "lerna run test --scope @integration/playwright-test-ct",
+    "integration-test:rest": "lerna run test --scope @integration/rest",
+    "integration-test:playwright-web": "lerna run test --scope @integration/playwright-web",
+    "integration-test:protractor-all": "lerna run test --concurrency 1 --scope @integration/protractor-*",
+    "integration-test:protractor-test-runners": "lerna run test --concurrency 1 --scope @integration/protractor-cucumber --scope @integration/protractor-jasmine --scope @integration/protractor-mocha",
+    "integration-test:protractor-cucumber": "lerna run test --scope @integration/protractor-cucumber",
+    "integration-test:protractor-jasmine": "lerna run test --scope @integration/protractor-jasmine",
+    "integration-test:protractor-mocha": "lerna run test --scope @integration/protractor-mocha",
+    "integration-test:protractor-web": "lerna run test --scope @integration/protractor-web",
+    "integration-test:webdriverio-8-all": "lerna run test --concurrency 1 --scope @integration/webdriverio-8-*",
+    "integration-test:webdriverio-8-test-runners": "lerna run test --concurrency 1 --scope @integration/webdriverio-8-cucumber --scope @integration/webdriverio-8-jasmine --scope @integration/webdriverio-8-mocha",
+    "integration-test:webdriverio-8-cucumber": "lerna run test --scope @integration/webdriverio-8-cucumber",
+    "integration-test:webdriverio-8-jasmine": "lerna run test --scope @integration/webdriverio-8-jasmine",
+    "integration-test:webdriverio-8-mocha": "lerna run test --scope @integration/webdriverio-8-mocha",
+    "integration-test:webdriverio-8-web": "lerna run test --scope @integration/webdriverio-8-web",
+    "integration-test:webdriverio-8-web-devtools": "lerna run test:devtools --stream --scope @integration/webdriverio-8-web",
+    "integration-test:webdriverio-8-web-webdriver": "lerna run test:webdriver --stream --scope @integration/webdriverio-8-web",
+    "integration-test:webdriverio-web": "lerna run test --scope @integration/webdriverio-web",
+    "integration-test:webdriverio-test-runners": "lerna run test --concurrency 1 --scope @integration/webdriverio-cucumber --scope @integration/webdriverio-jasmine --scope @integration/webdriverio-mocha",
     "report": "pnpm coverage:merge && pnpm coverage:report",
     "coverage:merge": "bin/coverage-merge.ts",
     "coverage:report": "c8 report --merge-async --reporter=html --reporter=lcov --reporter=text-summary --temp-directory=./target/coverage/tmp --report-dir=./target/coverage",
