ci(github): corrected grep pattern so that it works on GitHub Windows runners

--- a/examples/calculator-app/package.json
+++ b/examples/calculator-app/package.json
@@ -17,7 +17,7 @@
   "types": "lib/index.d.ts",
   "scripts": {
     "clean": "rimraf target",
-    "test": "mocha --config ../../.mocharc.yml 'spec/**/*.spec.*'",
+    "test": "mocha --config ../../.mocharc.yml spec/**/*.spec.*",
     "compile": "rimraf lib && tsc --project tsconfig.json",
     "verify": "npm test",
     "start": "node index.js",
