--- a/packages/assertions/package.json
+++ b/packages/assertions/package.json
@@ -33,7 +33,7 @@
   "scripts": {
     "clean": "rimraf target",
     "test": "c8 npm run test:no-coverage",
-    "test:no-coverage": "mocha --config ../../.mocharc.yml --reporter-options 'mocha-multi=.mocha-reporters.json' 'spec/**/*.spec.*'",
+    "test:no-coverage": "mocha --config ../../.mocharc.yml --reporter-options 'mocha-multi=.mocha-reporters.json' spec/**/*.spec.*",
     "compile": "rimraf lib && tsc --project tsconfig.build.json"
   },
   "repository": {
