--- a/integration/protractor-jasmine/package.json
+++ b/integration/protractor-jasmine/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "clean": "rimraf target",
-    "test": "c8 mocha --config ../../.mocharc.yml --timeout 60000 spec/**/*.spec.*"
+    "test": "c8 mocha --config ../../.mocharc.yml --timeout 60000 'spec/**/*.spec.*'"
   },
   "repository": {
     "type": "git",
