--- a/integration/webdriverio-8-cucumber/package.json
+++ b/integration/webdriverio-8-cucumber/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "clean": "rimraf target",
-    "test": "c8 mocha --config ../../.mocharc.yml spec/**/*.spec.*"
+    "test": "c8 mocha --config ../../.mocharc.yml 'spec/**/*.spec.*'"
   },
   "repository": {
     "type": "git",
