ci(github): moved spec config to mocharc files

--- a/.mocharc.yml
+++ b/.mocharc.yml
@@ -9,3 +9,6 @@ timeout: 10000
 v8-stack-trace-limit: 100
 node-option:
   - trace-warnings
+
+# Relative to the package root
+spec: 'spec/**/*.spec.*'
