--- a/packages/webdriverio/.mocharc.yml
+++ b/packages/webdriverio/.mocharc.yml
@@ -9,3 +9,5 @@ v8-stack-trace-limit: 100
 node-option:
   - trace-warnings
   - import=tsx
+# Relative to the package root
+spec: 'spec/**/*.spec.*'
