--- a/packages/serenity-bdd/package.json
+++ b/packages/serenity-bdd/package.json
@@ -37,7 +37,7 @@
   "scripts": {
     "clean": "rimraf target",
     "test": "c8 npm run test:no-coverage",
-    "test:no-coverage": "mocha --config ../../.mocharc.yml 'spec/**/*.spec.*'",
+    "test:no-coverage": "mocha --config ../../.mocharc.yml --spec='spec/**/*.spec.*'",
     "compile": "rimraf lib && tsc --project tsconfig.build.json",
     "postcompile": "npm run populate-cache",
     "populate-cache": "node ./bin/serenity-bdd update --ignoreSSL --cacheDir './cache'"
