chore(github): use pnpm to install Playwright dependencies

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -155,7 +155,7 @@ jobs:
       - name: Test
         run: |
           mkdir target && \
-          npx --no playwright install --with-deps && \
+          pnpm dlx playwright install --with-deps && \
           make INTEGRATION_SCOPE=${{ matrix.module }} integration-test
       - name: Upload test reports
         if: failure()
