chore(github): make the utility scripts run on Windows
Related tickets: re https://github.com/orgs/serenity-js/discussions/2851

--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
   "scripts": {
     "postinstall": "pnpm postinstall:protractor && pnpm postinstall:playwright && pnpm postinstall:webdriverio",
     "postinstall:playwright": "npx playwright install --with-deps",
-    "postinstall:protractor": "npx ts-node bin/install-browsers.ts chrome@129 chromedriver@129",
-    "postinstall:webdriverio": "npx ts-node bin/install-browsers.ts chrome@stable chromedriver@stable",
+    "postinstall:protractor": "npx tsx bin/install-browsers.ts chrome@129 chromedriver@129",
+    "postinstall:webdriverio": "npx tsx bin/install-browsers.ts chrome@stable chromedriver@stable",
     "clean": "rimraf target && lerna run clean",
     "cc": "nx reset",
     "lint": "eslint --ext ts --config .eslintrc.yml .",
@@ -76,15 +76,15 @@
     "integration-test:webdriverio-web": "lerna run test --scope @integration/webdriverio-web",
     "integration-test:webdriverio-test-runners": "lerna run test --concurrency 1 --scope @integration/webdriverio-cucumber --scope @integration/webdriverio-jasmine --scope @integration/webdriverio-mocha",
     "report": "pnpm coverage:merge && pnpm coverage:report",
-    "coverage:merge": "bin/coverage-merge.ts",
+    "coverage:merge": "npx tsx bin/coverage-merge.ts",
     "coverage:report": "c8 report --merge-async --reporter=html --reporter=lcov --reporter=text-summary --temp-directory=./target/coverage/tmp --report-dir=./target/coverage",
     "coverage:publish": "cat ./target/coverage/lcov.info | node ./node_modules/coveralls/bin/coveralls.js",
-    "commit": "bin/commit.ts",
+    "commit": "npx tsx bin/commit.ts",
     "lerna": "lerna",
     "lerna:publish": "lerna publish --yes",
     "lerna:test:version": "lerna version --no-git-tag-version --no-push",
     "lerna:test:publish": "lerna publish --no-git-tag-version --no-push",
-    "version:print": "bin/print-versions.ts",
+    "version:print": "npx tsx bin/print-versions.ts",
     "prepare": "husky"
   },
   "devDependencies": {
