style(examples): removed an unnecessary comment

--- a/examples/playwright-test-todomvc/serenity.properties
+++ b/examples/playwright-test-todomvc/serenity.properties
@@ -1,3 +1,2 @@
-serenity.project.name=Serenity/JS with Playwright
+serenity.project.name=Serenity/JS with Playwright Test
 serenity.compress.filenames=false
-#serenity.estimated.tests.per.requiremen:t=4
