feat(mcp): first draft of the Serenity/JS MCP server

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -137,6 +137,7 @@ jobs:
     strategy:
       matrix:
         module:
+          - mcp
           - playwright-test
           - playwright-test-ct
           - playwright-web
