--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -43,8 +43,8 @@
   ],
   "scripts": {
     "clean": "rimraf target",
-    "test": "c8 npm run test:no-coverage",
-    "test:no-coverage": "mocha --config ../../.mocharc.yml --spec='spec/**/*.spec.*'",
+    "~test": "c8 npm run test:no-coverage",
+    "~test:no-coverage": "mocha --config ../../.mocharc.yml --spec='spec/**/*.spec.*'",
     "compile": "rimraf lib && tsc --project tsconfig.build.json"
   },
   "dependencies": {
