--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "integration-test:cucumber-10": "lerna run test --concurrency 1 --scope @integration/cucumber-10",
     "integration-test:cucumber-11": "lerna run test --concurrency 1 --scope @integration/cucumber-11",
     "integration-test:jasmine": "lerna run test --concurrency 1 --scope @integration/jasmine",
+    "integration-test:mcp": "lerna run test --concurrency 1 --scope @integration/mcp",
     "integration-test:mocha": "lerna run test --concurrency 1 --scope @integration/mocha",
     "integration-test:playwright-all": "lerna run test --concurrency 1 --scope @integration/playwright-*",
     "integration-test:playwright-test": "lerna run test --scope @integration/playwright-test",
