--- a/.qlty/qlty.toml
+++ b/.qlty/qlty.toml
@@ -3,9 +3,8 @@ config_version = "0"
 exclude_patterns = [
     "**/node_modules/**",
     "integration/**",
-    "**/examples/",
-    "**/node_modules/",
-    "**/spec/",
+    "examples/**",
+    "**/spec/**",
     "**/*.d.ts",
 ]
 test_patterns = [
