feat(cucumber): support for Cucumber 12

--- a/nx.json
+++ b/nx.json
@@ -63,6 +63,7 @@
         "{projectRoot}/integration/cucumber-9/target",
         "{projectRoot}/integration/cucumber-10/target",
         "{projectRoot}/integration/cucumber-11/target",
+        "{projectRoot}/integration/cucumber-12/target",
         "{projectRoot}/integration/jasmine/target",
         "{projectRoot}/integration/mocha/target",
         "{projectRoot}/integration/playwright-test/target",
