--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "integration-test:cucumber-9": "lerna run test --concurrency 1 --scope @integration/cucumber-9",
     "integration-test:cucumber-10": "lerna run test --concurrency 1 --scope @integration/cucumber-10",
     "integration-test:cucumber-11": "lerna run test --concurrency 1 --scope @integration/cucumber-11",
+    "integration-test:cucumber-12": "lerna run test --concurrency 1 --scope @integration/cucumber-12",
     "integration-test:jasmine": "lerna run test --concurrency 1 --scope @integration/jasmine",
     "integration-test:mocha": "lerna run test --concurrency 1 --scope @integration/mocha",
     "integration-test:playwright-all": "lerna run test --concurrency 1 --scope @integration/playwright-*",
