ci(github): enabled cucumber-12 integration test job

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -270,6 +270,7 @@ jobs:
           - cucumber-9
           - cucumber-10
           - cucumber-11
+          - cucumber-12
           - jasmine
           - mocha
           - rest
