ci(qlty): enabled feedback from Qlty in PRs

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -308,6 +308,7 @@ jobs:
       - test-integration-webdriverio
     runs-on: ubuntu-24.04
     permissions:
+      checks: write
       contents: read
       id-token: write
     steps:
