--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -341,6 +341,8 @@ jobs:
       contents: read
       id-token: write
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
       - name: Qlty
         uses: qltysh/qlty-action/coverage@v1.1.1
         with:
