--- a/.c8rc.json
+++ b/.c8rc.json
@@ -17,7 +17,12 @@
     ".js"
   ],
   "reporter": [
-    "lcovonly",
+    "lcov",
     "text-summary"
-  ]
+  ],
+  "reporterOptions": {
+    "lcovonly": {
+      "projectRoot": "../../"
+    }
+  }
 }
