ci(qlty): adjusted coverage config

--- a/.c8rc.json
+++ b/.c8rc.json
@@ -17,10 +17,13 @@
     ".js"
   ],
   "reporter": [
-    "lcov",
+    "lcovonly",
     "text-summary"
   ],
   "reporterOptions": {
+    "lcov": {
+      "projectRoot": "../../"
+    },
     "lcovonly": {
       "projectRoot": "../../"
     }
