--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -352,8 +352,19 @@ jobs:
 #          command: complete
 
       # TODO: Qlty issue workaround
+
+      # Based on https://github.com/qltysh/qlty-action/blob/325e718842513d9e19baf91280cab9bc6db6e17b/install/install_qlty.sh
       - name: Install Qlty CLI
-        run: curl https://qlty.sh | sh
+        run: |
+          curl -fsSL https://qlty.sh | bash
+  
+          qlty_bin_dir="$HOME/.qlty/bin"
+          qlty_path="$qlty_bin_dir/qlty"
+          
+          echo "${qlty_bin_dir}" >>"${GITHUB_PATH}"
+          
+          (${qlty_path} version >/dev/null 2>&1) || echo "::warning::${qlty_path} does not exist!"
+
       - name: Qlty Complete
         uses: actions/github-script@v7
         id: qlty
